crates/app-data/tests/ui/partner_fee_bps_width_witness.stderr
error[E0308]: mismatched types
  --> tests/ui/partner_fee_bps_width_witness.rs
   |
   |         volume_bps: 100_000_u32,
   |                     ^^^^^^^^^^^ expected `u16`, found `u32`
   |
   = note: `PartnerFeePolicy::Volume::volume_bps` is typed as `u16` because every reviewed partner-fee basis-point field is capped well inside the `u16` range; narrowing the field at the compiler means an out-of-range integer literal fails here rather than at the reviewed wire.

For more information about this error, try `rustc --explain E0308`.
